--- a/pom.xml
+++ b/pom.xml
@@ -9,11 +9,16 @@
     <version>0.0.1-SNAPSHOT</version>
 
     <properties>
-        <java.version>10</java.version>
+        <java.version>1.8</java.version>
         <junit.version>5.1.1</junit.version>
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>org.mindrot</groupId>
+            <artifactId>jbcrypt</artifactId>
+            <version>0.4</version>
+        </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
